@@ -39,10 +39,6 @@ tgtsrcs_montest := montest.cc
 tgtlibs_montest := $(commonlibs) pds/mon
 tgtslib_montest := /usr/lib/rt
 
-tgtsrcs_xtcreader := xtcreader.cc
-tgtlibs_xtcreader := pdsdata/acqdata $(commonlibs) pds/mon
-tgtslib_xtcreader := /usr/lib/rt
-
 tgtsrcs_showPartitions := showPartitions.cc
 tgtlibs_showPartitions := $(commonlibs)
 tgtslib_showPartitions := /usr/lib/rt
@@ -50,3 +46,8 @@ tgtslib_showPartitions := /usr/lib/rt
 tgtsrcs_killPartition := killPartition.cc
 tgtlibs_killPartition := $(commonlibs)
 tgtslib_killPartition := /usr/lib/rt
+
+#it's very important that xtcreader only depend on pdsdata - cpo
+tgtsrcs_xtcreader := xtcreader.cc
+tgtlibs_xtcreader := pdsdata/xtcdata pdsdata/acqdata
+tgtslib_xtcreader := /usr/lib/rt
