@@ -1,3 +1,5 @@
+24-Mar-2009     cpo     Tag V00-07-02. Removed xtcreader dependencies.
+                        Cleaned up voltage calculations in AcqDisplay.
 24-Mar-2009     cpo     Tag V00-07-01. Add monitoring support for acqiris
                         waveforms.  Fix xtcreader compile bugs.  Move
                         monitoring stuff for both opal1k and acqiris
